--- a/CSS/IndexCSS/footer.css
+++ b/CSS/IndexCSS/footer.css
@@ -1,9 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap');
+
+*{
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    font-family: 'Bitter', serif;
+    font-family: 'Lora', serif;
+    font-family: 'Open Sans', sans-serif;
+    .mySlides {display: none;}
+    /* img {vertical-align: middle;} */
+}
+:root{
+    --primary: #007400;
+    --secondary:#FFBA3F ;
+    --text:#4E4E4E;
+    --bg: #FFDD90; 
+}
+
 .footer1{
     background-color: var(--secondary);
+}
+.footer1 h2{
+    color: #222;
+    font-family: Open Sans;
+    font-size: 24px;
+}
+.footer1 input{
+    width: 410px;
+}
+.footer1 button{
+    border-radius: 0;
+    font-size: 16px;
 }
 .footer2 img{
     width: 20% !important;
 }
 .footer2 .icon-links img{
     width: 5% !important;
+}
+.footer2 .footer-links1 a:hover{
+    color: var(--primary);
 }
