--- a/CSS/IndexCSS/sec1.css
+++ b/CSS/IndexCSS/sec1.css
@@ -1,4 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap');
 
+*{
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    font-family: 'Bitter', serif;
+    font-family: 'Lora', serif;
+    font-family: 'Open Sans', sans-serif;
+    .mySlides {display: none;}
+    /* img {vertical-align: middle;} */
+}
+:root{
+    --primary: #007400;
+    --secondary:#FFBA3F ;
+    --text:#4E4E4E;
+    --bg: #FFDD90; 
+}
 .sec1 , .sec2 , .sec3, .sec4, .sec5, .sec6 , .footer1, .footer2{
     width: 100%;
 }
@@ -16,7 +33,8 @@
     color: #fff;
 }
 .sec1-text p, .sec2 p, .sec3-text p, .sec4 p, .sec5 p{
-    font-family: Lora;
+    font-family: 'Lora', serif;
+    color: var(--text);
 }
 .sec2 .card-img-top , .sec4 .card-img-top{
     width: 15%;
@@ -24,4 +42,21 @@
 .sec2 .card, .sec4 .card{
     background-color: var(--bg);
     border: none;
+    width: 320px;
+    height: 320px;
+}
+.card-img-top{
+    width: var(--40, 40px);
+    height: var(--40, 40px);
+}
+.card-title{
+    color: var(--text);
+    font-size: 24px !important;
+    font-weight: 700;
+    font-family: Open Sans;
+    
+}
+.card-text{
+    width: 300px;
+    text-align: center;
 }
