--- a/CSS/IndexCSS/sec5.css
+++ b/CSS/IndexCSS/sec5.css
@@ -1,16 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap');
 
-.sec5 .card-wrapper{
-    width: 70%;
-    height: 100%;
+*{
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    font-family: 'Bitter', serif;
+    font-family: 'Lora', serif;
+    font-family: 'Open Sans', sans-serif;
+    .mySlides {display: none;}
+    /* img {vertical-align: middle;} */
 }
+:root{
+    --primary: #007400;
+    --secondary:#FFBA3F ;
+    --text:#4E4E4E;
+    --bg: #FFDD90; 
+}
+.sec5 h2{
+    font-size: 36px !important;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--text);
+    font-weight: 700;
+    width: 385px !important;
+}
+
 .sec5 .card-top, .card-bottom{
     border: 3px solid var(--secondary);
-    height: 70% !important;
-    width: 90%;
+    width: 261px;
+    height: 399px;
 }
 .card1{
-    margin-top: 15rem !important;
+    margin-top: 5rem !important;
 }
-.card3{
-    margin-top: 10rem !important;
+.card2{
+    margin-top: -8rem !important;
+}
+.sec6 h2, .sec1 h2 , .sec3 h2{
+    font-family: 'Open Sans', sans-serif;
+    color: var(--text);
+    font-size: 36px;
+    font-weight: 700;
 }
