--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -1,139 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap");
 
-*{
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box;
-    font-family: 'Bitter', serif;
-    font-family: 'Lora', serif;
-    font-family: 'Open Sans', sans-serif;
-    .mySlides {display: none;}
-    /* img {vertical-align: middle;} */
+* {
+	margin: 0 !important;
+	padding: 0 !important;
+	box-sizing: border-box;
+	font-family: "Bitter", serif;
+	font-family: "Lora", serif;
+	font-family: "Open Sans", sans-serif;
+	.mySlides {
+		display: none;
+	}
+	/* img {vertical-align: middle;} */
 }
-:root{
-    --primary: #007400;
-    --secondary:#FFBA3F ;
-    --text:#4E4E4E;
-    --bg: #FFDD90; 
+:root {
+	--primary: #007400;
+	--secondary: #ffba3f;
+	--text: #4e4e4e;
+	--bg: #ffdd90;
+    --heading: #14365A;
 }
-body{
-    font-family: 'Bitter', serif;
+body {
+	font-family: "Bitter", serif;
 }
-a{
-    text-decoration: none;
+a {
+	text-decoration: none;
 }
-.login-section .login-container{
-    width: 92% !important;
-    height: 100vh !important;
+.login-section .login-container {
+	width: 92% !important;
+	height: 100vh !important;
 }
-.login-image-wrapper{
-    width: 45% !important;
-    height: 100% !important;
+.login-image-wrapper {
+	width: 45% !important;
+	height: 100% !important;
 }
-.login-image-wrapper img{
-    height: 102% !important;
+.login-image-wrapper img {
+	height: 102% !important;
 }
-.login-content{
-    width: 45% !important;
-    margin-top: 3rem !important;
-    height: 100% !important;
+.login-content {
+	width: 45% !important;
+	margin-top: 3rem !important;
+	height: 100% !important;
 }
-.login-btn{
-    background-color: var(--primary);
-    border-radius: 0;
+.login-btn {
+	background-color: var(--primary);
+	border-radius: 0;
 }
-.login-btn:hover{
-    background-color: var(--primary);
+.login-btn:hover {
+	background-color: var(--primary);
 }
-.continue-btn{
-    border: 1px solid var(--primary) !important;
-    border-radius: 8px !important;
+.continue-btn {
+	border: 1px solid var(--primary) !important;
+	border-radius: 8px !important;
 }
-.login-content h2{
-    background-color: white !important;
-    padding-inline: 1rem !important;
-    color:  #A7A4A4;
-    position: absolute;
-    top: -50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.login-content h2 {
+	background-color: white !important;
+	padding-inline: 1rem !important;
+	color: #a7a4a4;
+	position: absolute;
+	top: -50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-.login-btn-wrapper button{
-    border: 1px solid #0077B6 !important;
-    padding-block: 0.5rem !important;
-    padding-inline: 0.75rem !important;
+.login-btn-wrapper button {
+	border: 1px solid #0077b6 !important;
+	padding-block: 0.5rem !important;
+	padding-inline: 0.75rem !important;
 }
 
-.login-content button img{
+.login-content button img {
+	background-color: #e8e8e8;
+	border-radius: 8px;
+}
+h1{
+    color: var(--heading);
+    font-size: 28px;
+    font-family: "Bitter", serif;
+}
+.btn-s {
+	color:  #444f62;
+    width: 520px;
+    height: 90px;
+	font-feature-settings: "salt" on, "liga" off;
+	font-family: "Bitter", serif;
+	font-size: 18px !important;
+	font-style: normal;
+	font-weight: 500;
+}
+.btn-s .img{
     background-color: #E8E8E8;
-    border-radius: 8px;
+    border-radius: 10px;
+    width: 90px;
+    height: 90px;
+    display: flex;
 }
-
-
-
-
-@media only screen and (max-width: 912px){
-    .login-image-wrapper img{
-        height: 50% !important;
-    }
+.btn-s .img img{
+    width: 48px;
+    margin-inline: auto !important;
 }
-@media only screen and (max-width: 820px){
-    .login-content .top-p{
-        width: 90% !important;
-    }
-    .login-image-wrapper img{
-        height: 60% !important;
-    }
+.btn-s a{
+    color:  #444f62;
 }
-@media only screen and (max-width: 768px){
-    .login-image-wrapper img{
-        height: 65% !important;
-    }
+@media only screen and (max-width: 912px) {
+	.login-image-wrapper img {
+		height: 50% !important;
+	}
 }
-@media only screen and (max-width: 540px){
-    .login-image-wrapper img{
-        height: 100% !important;
-    }
+@media only screen and (max-width: 820px) {
+	.login-content .top-p {
+		width: 90% !important;
+	}
+	.login-image-wrapper img {
+		height: 60% !important;
+	}
 }
-@media only screen and (max-width: 490px){
-    .login-image-wrapper{
-        width: 1% !important;
-        opacity: 0;
-    }
-    .login-content{
-        width: 95% !important;
-        margin-inline: auto !important;
-    }
-    .login-content .top-p{
-        width: 90% !important;
-    }
-    /* .login-btn-wrapper{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem !important;
-    } */
+@media only screen and (max-width: 768px) {
+	.login-image-wrapper img {
+		height: 65% !important;
+	}
 }
-@media only screen and (max-width: 375px){
-    .login-options{
-        margin-block: 3rem !important;
-    }
-    /* .login-btn-wrapper{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem !important;
-    } */
+@media only screen and (max-width: 540px) {
+	.login-image-wrapper img {
+		height: 100% !important;
+	}
 }
-@media only screen and (max-width: 360px){
-    /* .login-image-wrapper img{
-        height: 110% !important;
-    } */
+@media only screen and (max-width: 490px) {
+	.login-image-wrapper {
+		width: 1% !important;
+		opacity: 0;
+	}
+	.login-content {
+		width: 95% !important;
+		margin-inline: auto !important;
+	}
+	.login-content .top-p {
+		width: 90% !important;
+	}
 }
-@media only screen and (max-width: 280px){
-    /* .login-image-wrapper img{
-        height: 135% !important;
-    } */
+@media only screen and (max-width: 375px) {
+	.login-options {
+		margin-block: 3rem !important;
+	}
 }
-
-/* input:invalid {
-    border: 1px solid red;
-} */
