--- a/CSS/IndexCSS/header.css
+++ b/CSS/IndexCSS/header.css
@@ -1,155 +1,164 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,600;1,700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,700&display=swap");
 
-*{
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box;
-    font-family: 'Bitter', serif;
-    font-family: 'Lora', serif;
-    font-family: 'Open Sans', sans-serif;
-    .mySlides {display: none;}
-    /* img {vertical-align: middle;} */
+* {
+	margin: 0 !important;
+	padding: 0 !important;
+	box-sizing: border-box;
+	font-family: "Bitter", serif;
+	font-family: "Lora", serif;
+	font-family: "Open Sans", sans-serif;
+	.mySlides {
+		display: none;
+	}
+	/* img {vertical-align: middle;} */
 }
-:root{
-    --primary: #007400;
-    --secondary:#FFBA3F ;
-    --text:#4E4E4E;
-    --bg: #FFDD90; 
+:root {
+	--primary: #007400;
+	--secondary: #ffba3f;
+	--text: #4e4e4e;
+	--bg: #ffdd90;
 }
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+	font-family: "Open Sans", sans-serif;
 }
-a{
-    text-decoration: none;
-    color: var(--text); 
-} 
-li{
-    list-style: none;
+a {
+	text-decoration: none;
+	color: var(--text);
 }
-
-
-
-
-.navbar-brand img{
-    width: 5rem;
-    height: 4rem;
-    flex-shrink: 0;
-}
-#first-link{
-    color: var(--secondary) ;
+li {
+	list-style: none;
 }
 
-.navbar-nav li a{
-    color: #4E4E4E;
+.navbar-brand img {
+	width: 5rem;
+	height: 4rem;
+	flex-shrink: 0;
+}
+#first-link {
+	color: var(--secondary);
 }
 
-.dropdown-menu{
-    width: 650px !important;
-    height: 300px !important;
-}
-.products-title{
-    color: var(--primary);
-}
-.btn{
-    border: 1px solid transparent;
-    transition:.3s ease all;
-    padding: 0.75rem 2.4rem;
-    font-size: 1.15rem;
-    letter-spacing: 1px;
-}
-.btn-1 , .btn-1:hover{
-    background-color: transparent;
-    color: black;
-    border: 1px solid #007400;
+.navbar-nav li a {
+	color: #4e4e4e;
 }
 
-.btn-2 , .btn-2:hover{
-    background-color: var(--primary);
-    color: #ECEDEE;
-    cursor: pointer;
+.dropdown-menu {
+	width: 650px !important;
+	height: 300px !important;
+}
+.products-title {
+	color: var(--primary);
+}
+.btn {
+	border: 1px solid transparent;
+	transition: 0.3s ease all;
+	padding: 0.75rem 2.4rem;
+	font-size: 1.15rem;
+	letter-spacing: 1px;
+}
+.btn-1,
+.btn-1:hover {
+	background-color: transparent;
+	color: black;
+	border: 1px solid #007400;
 }
 
-header{
-    height: 100vh !important;
-    /* width: 100% !important; */
-    margin-bottom: 3.5rem !important;
-
+.btn-2,
+.btn-2:hover {
+	background-color: var(--primary);
+	color: #ecedee;
+	cursor: pointer;
 }
 
+header {
+	height: 100vh !important;
+	/* width: 100% !important; */
+	margin-bottom: 3.5rem !important;
+}
 
 /* hero section */
 /* styles.css */
 .hero-container {
-    width: 100%;
-    position: relative;
-    height: 100vh !important;
-    /* max-width: 800px; */
-    overflow: hidden;
+	width: 100%;
+	position: relative;
+	height: 100vh !important;
+	/* max-width: 800px; */
+	overflow: hidden;
 }
 
 .slideshow-container {
-    position: relative;
-    max-width: 1900px;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
+	position: relative;
+	max-width: 1900px;
+	height: 100vh;
+	overflow: hidden;
+	display: flex;
 }
 
 .slide {
-    display: none;
-    object-fit: cover;
+	display: none;
+	object-fit: cover;
 }
 
 .slide img {
-    width: auto;
-    height: 100vh;
-    object-fit: cover;
+	width: 100%;
+	height: 100vh !important;
+	object-fit: cover;
 }
 
+.img2 {
+	width: 130% !important;
+	filter: contrast(5px);
+}
 .dot {
-    display: inline-block;
-    position: absolute;
-    bottom: 5%;
-    width: 15px;
-    height: 15px;
-    margin: 0 5px;
-    background-color: #6B6B6B;
-    border-radius: 50%;
-    cursor: pointer;
+	display: inline-block;
+	position: absolute;
+	bottom: 5%;
+	width: 15px;
+	height: 15px;
+	margin: 0 5px;
+	background-color: #6b6b6b;
+	border-radius: 50%;
+	cursor: pointer;
 }
 
 .dot.active {
-    background-color: #fff;
+	background-color: #fff;
 }
 
-
-  /* Fading animation */
+/* Fading animation */
 .fade {
-    animation-name: fade;
-    animation-duration: 6s; /* Extend the duration for slower transition */
-    animation-iteration-count: infinite; /* Optionally, make it loop infinitely */
+	animation-name: fade;
+	animation-duration: 20s; /* Extend the duration for slower transition */
+	animation-iteration-count: infinite; /* Optionally, make it loop infinitely */
 }
 
 @keyframes fade {
-    0% { opacity: .9; } /* Start fully visible */
-    50% { opacity: 1; } /* First image fully visible */
-    100% { opacity: .9; } /* Second image (looping) */
+	0% {
+		opacity: 1;
+	} /* Start fully visible */
+	50% {
+		opacity: 2;
+	} /* First image fully visible */
+	100% {
+		opacity: 1;
+	} /* Second image (looping) */
 }
 
 .hero-text {
-    width: 90%;
-    margin-inline: auto !important;
-    color: #FFF;
-    position: absolute;
-    bottom: 10%;
-    right: 0;
-    left: 0;
+	width: 90%;
+	margin-inline: auto !important;
+	color: #fff;
+	position: absolute;
+	bottom: 10%;
+	right: 0;
+	left: 0;
 }
 
-.hero-btn, .hero-btn:hover{
-    background-color: var(--primary);
-    border-radius: 8px;
-    color: #fff;
+.hero-btn,
+.hero-btn:hover {
+	background-color: var(--primary);
+	border-radius: 8px;
+	color: #fff;
 }
 
 /* .img2-text{
