--- a/CSS/farmer-dashboard/orders.css
+++ b/CSS/farmer-dashboard/orders.css
@@ -145,7 +145,7 @@ aside .link-wrapper {
 }
 .item-container {
     width: 100%;
-    height: 100% !important;
+    /* height: 100% !important; */
 }
 .main-content .card::-webkit-scrollbar{
 	display: none;
@@ -200,4 +200,143 @@ table .completed-status {
 }
 .table-hover:hover .last-tr {
     color: var(--text) !important;
+}
+
+
+
+/* payment styles */
+.main-content .withdrawal {
+	color: var(--primary);
+	font-size: 18px !important;
+	line-height: 28px;
+	cursor: pointer;
+	position: relative;
+}
+
+.main-content .withdrawal-card {
+	width: 895px;
+	height: 735px;
+	flex-shrink: 0;
+	background-color: #FFF;
+	border: none;
+	position: absolute;
+	z-index: -10;
+	opacity: 0;
+}
+.main-content .withdrawal-card .table tr td {
+	color: var(--text);
+	font-size: 16px !important;
+	font-weight: 600;
+	line-height: 28px;
+	align-items: center;
+	padding: 15px !important;
+}
+.btn2 {
+	background-color: var(--primary);
+	color: #FFF;
+	padding: 12px 8px !important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 8px !important;
+	border-radius: 8px;
+	font-family: "Lora", serif;
+	font-size: 16px !important;
+	line-height: 24px;
+	width: 160px;
+	cursor: pointer;
+}
+.main-content .withdrawal-popup {
+	width: 688px;
+	height: 340px;
+	background-color: #FFF;
+	border: none;
+	opacity: 0;
+	z-index: -5;
+}
+
+#div-input {
+	flex-shrink: 0;
+}
+form .input-div .label {
+    color: var(--text);
+	font-size: 16px !important;
+	font-weight: 600;
+	line-height: 28px;
+}
+form .input-div select {
+	width: 276px;
+	height: 36px;
+	border: 1px solid #BDBDBD;
+	border-radius: 4px;
+	color: #979696;
+}
+form .input-div input {
+	width: 156px;
+	height: 36px;
+	border: 1px solid #BDBDBD;
+	color: #979696;
+	border-radius: 4px;
+}
+form .form-p {
+	color: #8b919c;
+	font-size: 12px !important;
+	font-weight: 400;
+	line-height: 28px;
+}
+.title-p {
+	color: #8b919c;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 28px;
+}
+.green-c {
+	color: var(--primary);
+}
+.hr {
+	height: 2px !important;
+	background-color: var(--primary);
+}
+.balance-h6 {
+	color: var(--text);
+	line-height: 28px;
+	font-size: 20px !important;
+}
+.i-icon {
+	cursor: pointer;
+}
+
+.main-content .balance-popup {
+	width: 542px;
+	height: 297px;
+	flex-shrink: 0;
+	border-radius: 8px;
+	background-color: #FFF;
+	position: absolute;
+	top: 15%;
+	z-index: -5;
+	opacity: 0;
+}
+.main-content .balance-popup .balance-p {
+	color: #000;
+	font-size: 14px !important;
+	font-weight: 400;
+	line-height: 28px;
+}
+.btn1 {
+	color: var(--primary);
+	border: 1px solid var(--primary);
+	width: 160px;
+	display: flex;
+	padding: 12px 8px !important;
+	justify-content: center;
+	align-items: center;
+	gap: 8px;
+	border-radius: 8px;
+    font-size: 16px !important;
+	font-weight: 500;
+	line-height: 24px;
+	font-family: "Lora", serif;
+	background-color: var(--dashboard);
+	cursor: pointer;
 }
